--- a/games/memory-game/memory-game-index.html
+++ b/games/memory-game/memory-game-index.html
@@ -15,7 +15,7 @@
             --dark-color: #1B1C1D;         /* Dark Gray */
             --light-color: #FFFFFF;        /* White */
             --gray-color: #767676;         /* Medium Gray */
-            --background-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            --background-gradient: linear-gradient(135deg, #FF6B35 0%, #F7931E 100%);
             --card-back-gradient: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
             --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
             --border-radius: 12px;
@@ -48,6 +48,7 @@
             max-width: 600px;
             width: 100%;
             padding: 30px;
+            padding-top: 50px; /* Add extra padding for close button */
             position: relative;
             animation: slideIn 0.5s ease-out;
         }
@@ -66,21 +67,22 @@
         /* Close Button */
         .close-btn {
             position: absolute;
-            top: 15px;
-            right: 15px;
-            width: 40px;
-            height: 40px;
+            top: 10px;
+            right: 10px;
+            width: 36px;
+            height: 36px;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             border: 2px solid var(--gray-color);
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            font-size: 24px;
+            font-size: 20px;
             color: var(--dark-color);
             transition: all var(--transition-speed) ease;
             z-index: 10;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .close-btn:hover {
@@ -183,15 +185,19 @@
             align-items: center;
             margin-bottom: 30px;
             padding-bottom: 20px;
+            padding-right: 50px; /* Add padding to avoid close button */
             border-bottom: 2px solid #f0f0f0;
+            flex-wrap: wrap;
+            gap: 15px;
         }
 
         .game-stat {
             display: flex;
             align-items: center;
-            gap: 10px;
-            font-size: 18px;
+            gap: 8px;
+            font-size: 16px;
             font-weight: 600;
+            white-space: nowrap;
         }
 
         .stat-icon {
@@ -453,6 +459,12 @@
         @media (max-width: 480px) {
             #game-container {
                 padding: 20px;
+                padding-top: 50px; /* Maintain space for close button */
+            }
+
+            .game-header {
+                padding-right: 40px; /* Adjust for mobile */
+                justify-content: flex-start;
             }
 
             .game-title {
@@ -478,6 +490,30 @@
 
             .completion-title {
                 font-size: 28px;
+            }
+
+            .game-stat {
+                font-size: 14px;
+            }
+
+            .stat-icon {
+                width: 28px;
+                height: 28px;
+                font-size: 14px;
+            }
+        }
+
+        /* Extra small devices */
+        @media (max-width: 380px) {
+            .game-header {
+                flex-direction: column;
+                align-items: flex-start;
+                padding-right: 0;
+                gap: 10px;
+            }
+
+            .game-stat {
+                width: 100%;
             }
         }
     </style>
@@ -526,7 +562,7 @@
                 </div>
                 <div class="game-stat">
                     <div class="stat-icon" aria-hidden="true">🎯</div>
-                    <span>Pairs: <span class="stat-value" id="pairs-display">0/6</span></span>
+                    <span>Pairs: <span class="stat-value" id="pairs-display">0</span></span>
                 </div>
             </div>
 
@@ -749,7 +785,7 @@
             // Update UI
             document.getElementById('welcome-screen').classList.remove('active');
             document.getElementById('game-screen').classList.add('active');
-            document.getElementById('pairs-display').textContent = `0/${difficulty.pairs}`;
+            document.getElementById('pairs-display').textContent = '0';
 
             // Set grid layout
             const grid = document.getElementById('memory-grid');
@@ -866,8 +902,7 @@
         function updateProgress() {
             const progress = (gameState.matchedPairs / gameState.totalPairs) * 100;
             document.getElementById('progress-fill').style.width = `${progress}%`;
-            document.getElementById('pairs-display').textContent = 
-                `${gameState.matchedPairs}/${gameState.totalPairs}`;
+            document.getElementById('pairs-display').textContent = gameState.matchedPairs;
         }
 
         function startTimer() {
